fix emoji-like gifs when doing a mousehover
An emoji sometimes can be animated, and when it does Glip will use different
markup to build image. We still make it invisible but the hover event wasn't
working for them. That is verified to be fixed now.

--- a/custom-css/glip.css
+++ b/custom-css/glip.css
@@ -212,6 +212,10 @@ img[src*="gif" i] {
   visibility: visible;
 }
 
+.post_text:hover img[src*="gif" i] {
+  visibility: visible;
+}
+
 /* Doesn't seem to be working... */
 img[src*="gif" i]:after {
   background-color: var(--button-background-color);
